--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Haidiasha.github.io/Test",
+  "homepage": "https://Haidiasha.github.io/Test-3",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Test/"
+    "build": "parcel build src/*.html --public-url /Test-3/"
   },
   "repository": {
     "type": "git",
